# Agentic-RAG

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.index/: index.faiss  metadata.pkl
docs/: architecture.md  index.md  style_guide.md
docs/api/agentic_docs/: cli.md  config.md  types.md
docs/api/agentic_docs/agent/: agents.md  orchestrator.md
docs/api/agentic_docs/index/: embed.md  store_qdrant.md
docs/api/agentic_docs/io/: markdown_writer.md
docs/api/agentic_docs/llm/: api_llm.md  local_llm.md
docs/api/agentic_docs/parsing/: symbols.md
docs/api/tests/: test_agent.md  test_index.md  test_parsing.md  test_writer_md.md
examples/toy_repo/src/pkg/: module_a.py
scripts/: bootstrap.sh  run_local_llm.sh
src/agentic_docs/: __init__.py  cli.py  config.py  logging_utils.py  types.py
src/agentic_docs/agent/: agents.py  budget.py  diff.py  impact.py  orchestrator.py  planner.py  tools.py
src/agentic_docs/baselines/: classical_pdoc.py  nonrag_llm.py  static_rag.py
src/agentic_docs/eval/: datasets.py  metrics.py  run_bench.py
src/agentic_docs/index/: embed.py  metadata_store.py  mmr.py  search.py  store_faiss.py  store_qdrant.py
src/agentic_docs/io/: fs.py  git.py  markdown_writer.py  source_links.py
src/agentic_docs/llm/: api_llm.py  local_llm.py  prompts.py  validate.py  writer_md.py
src/agentic_docs/parsing/: relations.py  symbols.py
src/agentic_md_docs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_API_OLlama.py
